# Chinese-New-Year-and-Zodiac

./: .gitignore  LICENSE  README.md  dev_requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: label.yml.bk  pylint.yml
src/: CnyZodiac.py
tests/: test_chinese_new_year_zodiac.py
